[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/star/star.png" type="Texture" id=1]
[ext_resource path="res://assets/star/token.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/star/star.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 82.553

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DetectionArea/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DetectionArea/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ) ]
}

[node name="star" type="KinematicBody2D" groups=[
"stars",
]]
script = ExtResource( 3 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DetectionArea"]
rotation = 2.19911
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 1 )

[node name="ding" type="AudioStreamPlayer2D" parent="DetectionArea"]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
